--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   dio: ^5.3.3
   flutter_riverpod: ^2.4.2
   shared_preferences: ^2.2.1
+  iconly: ^1.0.1
+  flutter_screenutil: ^5.9.0
+  my_formfield: ^0.0.4
+  google_fonts: ^6.1.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
