--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: river_state
+name: shop_ease
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -43,6 +43,8 @@ dependencies:
   my_formfield: ^0.0.4
   google_fonts: ^6.1.0
   flutter_spinkit: ^5.2.0
+  file_picker: ^5.5.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
