--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,14 @@ dependencies:
   my_formfield: ^0.0.4
   google_fonts: ^6.1.0
   flutter_spinkit: ^5.2.0
-  file_picker: ^5.5.0
+  file_picker: ^6.1.1
   image_picker: ^1.0.4
+  flutter_secure_storage: ^9.0.0
+  cached_network_image: ^3.3.0
+  get_it: ^7.6.4
+  fpdart: ^1.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
